# ksl

./: .cursorignore  .gitignore  Cargo.toml  FILE_OVERVIEW.md  README.md  cargo_check.txt  clippyresults.md  error_tracker.md  file_inventory.md  fix_plan.md  ksl.templates.json  ksl_syntax_spec.txt  package-lock.json  sandbox_policy.toml
.cargo/: config.toml
.cursor/rules/: rulesforupdatingfile.mdc  whatwerebuildingandgeneralguidelines.mdc
examples/: example_ksl_contract.ksl
plugins/ksl_ai/: example.ksl  plugin.toml
plugins/ksl_finance/: example.ksl  plugin.toml
plugins/ksl_game/: example.ksl  plugin.toml
plugins/ksl_iot/: example.ksl  plugin.toml
plugins/ksl_validator/: example.ksl  plugin.toml
src/: gas_profile.rs  kapra_dsl.rs  kapra_vm.rs  ksl_abi.rs  ksl_ai.rs  ksl_analyzer.rs  ksl_aot.rs  ksl_ast.rs  ksl_ast_transform.rs  ksl_async.rs  ksl_bench.rs  ksl_benchmark.rs  ksl_bind.rs  ksl_bundler.rs  ksl_bytecode.rs  ksl_checker.rs  ksl_ci.rs  ksl_cli.rs  ksl_cli_spec.rs  ksl_common.rs  ksl_community.rs  ksl_compiler.rs  ksl_config.rs  ksl_consensus_manager.rs  ksl_contract.rs  ksl_contract_verifier.rs  ksl_coverage.rs  ksl_data_blob.rs  ksl_debug.rs  ksl_debugger.rs  ksl_dep_audit.rs  ksl_deploy.rs  ksl_dev_tools.rs  ksl_doc.rs  ksl_doc_lsp.rs  ksl_docgen.rs  ksl_docserver.rs  ksl_embedded.rs  ksl_errors.rs  ksl_export.rs  (+72 more)
src/shaders/: bls_aggregate.wgsl
src/static/: search.js  style.css
templates/: ai.ksl  contract.ksl  iot.ksl  preview.html  sandbox.toml  scaffold_gui.html  scaffold_preview.html  shard.ksl  validator.ksl  verifier.ksl  zk.ksl
tests/: bench_tests.rs
vscode/: language-configuration.json  package.json  tsconfig.json
vscode-extension/: CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  ksl-scaffold-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/.github/workflows/: build.yml
vscode-extension/src/: extension.ts
vscode-extension/src/test/suite/: extension.test.ts
vscode/src/: extension.ts
vscode/syntaxes/: ksl.tmLanguage.json
