[package]
name = "kapra_chain"
version = "0.1.0"
edition = "2024"

[dependencies]
sha3 = "0.10"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
log = "0.4"
pretty_assertions = "1.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
wasmtime = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "1.0"
seccompiler = "0.3"
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.3"
tempfile = "3.8"

# BLS12-381 signature lib
blst = "0.3.11"

# Post-quantum Dilithium support (via PQClean)
pqcrypto-dilithium = { version = "0.7", features = ["dilithium5"] }

# ABI and versioning support
sha2 = "0.10"
wasm-encoder = "0.20"
wasmparser = "0.100"
tokio = { version = "1.0", features = ["full"] }

# New dependencies
dilithium = "0.1.0"
aes-gcm = "0.10.3"
rand_core = "0.6.4"
base64 = "0.21.7"

env_logger = "0.10"
clap = "3.0"

zeroize = { version = "1.6", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"
