[package]
name = "KSL"
version = "0.1.0"
edition = "2024"

[dependencies]
sha3 = "0.10.8"
inkwell = { version = "0.6.0", features = ["llvm12-0"] }

log = "0.4.20"
pretty_assertions = "1.4.0"
bincode = "2.0.1"
wasmtime = "32.0.0"
ed25519-dalek = "2.1.1"
serde_json = "1.0.114"
quote = "1.0.36"
proc-macro2 = "1.0.79"
walkdir = "2.5.0"
tempfile = "3.10.1"
blst = "0.3.11"
pqcrypto-dilithium = "0.5.0"
sha2 = "0.10.8"
wasm-encoder = "0.230.0"
wasmparser = "0.230.0"
dilithium = "0.1.0"
aes-gcm = "0.10.3"
rand_core = "0.9.3"
base64 = "0.22.1"
env_logger = "0.11.8"
clap = "4.5.38"
rayon = "1.10.0"
toml = "0.8.22"
reqwest = "0.12.15"
semver = "1.0.26"
ignore = "0.4.23"
dirs = "6.0.0"
web-view = "0.7.3"
handlebars = "6.3.2"
rand = "0.9.1"
pqcrypto-traits = "0.3.5"
itertools = "0.14.0"
libloading = "0.8.7"
flate2 = "1.1.1"
zip = "2.6.1"
tera = "1.20.0"
notify = "8.0.0"
futures = "0.3.31"
regex = "1.11.1"
wasmtime-wasi = "32.0.0"
proptest = "1.6.0"
serde_yaml = "0.9.34"
sysinfo = "0.35.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
trust-dns-resolver = { version = "0.23.2", features = ["tokio-runtime"] }
opentelemetry = "0.29"
cranelift = "0.119.0"
inferno = { version = "0.12.2", features = ["cli"] }
wide = "0.7.32"
rustyline = "15.0.0"
z3 = "0.12.1"
tar = "0.4.44"
structopt = "0.3.26"
async-trait = "0.1.88"
wgpu = "25.0.0"
crossbeam-queue = "0.3.12"
cranelift-module = "0.119.0"
cranelift-codegen = "0.119.0"
cranelift-object = "0.119.0"
indicatif = "0.17.11"
backtrace = "=0.3.74"
humantime = "2.2.0"
keyring = "3.6.2"
rand_chacha = "0.9.0"
pqcrypto = "0.18.1"
hex = "0.4"
bytemuck = { version = "1.23", features = ["derive"] }
wasmer = "6.0.1"
wat = "1.230"
constant_time_eq = "0.4"
html-escape = "0.2"
opentelemetry-stdout = "0.29"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.chrono]
version = "0.4.31"
features = ["serde"]

[dependencies.syn]
version = "2.0.58"
features = ["full", "extra-traits"]

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.zeroize]
version = "1.6.0"
features = ["derive"]

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5.0"
nix = "0.30.1"
rlimit = "0.10.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"

